# imrmf_map_editor

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  NOTICE  README.md  THIRD_PARTY_LICENSES.md  dev.sh  docker_entrypoint.sh
.github/workflows/: build-image.yml
app/: BUILD.bazel  main.cpp  shell_minimal.html
canvas/: BUILD.bazel  canvas.cpp  canvas.hpp  http_texture_provider.cpp  http_texture_provider.hpp  overlays.cpp  overlays.hpp  stb_texture_provider.cpp  stb_texture_provider.hpp  viewport.cpp  viewport.hpp
config/: BUILD.bazel
extensions/: BUILD.bazel  imgui_docking.BUILD.bazel
model/: BUILD.bazel  building.cpp  building.hpp  yaml_io.cpp  yaml_io.hpp
server/: BUILD.bazel  buildings_api.cpp  buildings_api.hpp
server_rust/: BUILD.bazel  Cargo.toml
server_rust/src/: main.rs  server.rs  state.rs  sync.rs  validate.rs  yaml_bridge.rs
server_rust/src/storage/: local.rs  mod.rs  s3.rs
view/: BUILD.bazel  editor_view.cpp  editor_view.hpp
