module(
    name = "imrmf_map_editor",
    version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "rules_rust", version = "0.59.2")
bazel_dep(name = "curl", version = "8.4.0.bcr.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "glfw", version = "3.3.9")
bazel_dep(name = "emsdk", version = "4.0.17")
bazel_dep(name = "rules_shell", version = "0.3.0")

# rules_ros2 — the patched rmf_building_map_tools provides building_map_server,
# a ROS2 node that publishes /map at runtime
bazel_dep(name = "com_github_mvukov_rules_ros2")
archive_override(
    module_name = "com_github_mvukov_rules_ros2",
    strip_prefix = "rules_ros2-4710585558693b62bdab089ca3d0f050b765c819",
    urls = ["https://github.com/mvukov/rules_ros2/archive/4710585558693b62bdab089ca3d0f050b765c819.tar.gz"],
)

rules_ros2_non_module_deps = use_extension("@com_github_mvukov_rules_ros2//ros2:extensions.bzl", "non_module_deps")
use_repo(
    rules_ros2_non_module_deps,
    "ros2_rclpy",
    "ros2_rosidl",
    "ros2cli",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(versions = ["1.88.0"])

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "imrmf_pip",
    python_version = "3.10",
    requirements_lock = "//third_party:requirements.txt",
)
use_repo(pip, "imrmf_pip")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "imgui_docking",
    build_file = "//extensions:imgui_docking.BUILD.bazel",
    integrity = "sha256-jgW18G/RanmWr5YUN25fDa+z3gT4YZZDi/4F2hZzvO8=",
    strip_prefix = "imgui-92e2df59781d441d83cda284eccfe8dec8d0f7ad",
    url = "https://github.com/ocornut/imgui/archive/92e2df59781d441d83cda284eccfe8dec8d0f7ad.tar.gz",
)

http_archive(
    name = "rmf_building_map_tools",
    build_file = "//third_party:rmf_building_map_tools.BUILD.bazel",
    patch_args = ["-p1"],
    patch_tool = "patch",
    patches = [
        "//third_party/patches:0001-lazy-imports-for-nav-only.patch",
        "//third_party/patches:0002-building-map-server-file-watch.patch",
    ],
    sha256 = "1238833f27cca82862e1a8fe92ef91a18bcfe28e910139412a206240fef6f3be",
    strip_prefix = "rmf_traffic_editor-cd6bf2b49f0f6c8fd9decbfe07a8e97be27533f9/rmf_building_map_tools",
    urls = ["https://github.com/open-rmf/rmf_traffic_editor/archive/cd6bf2b49f0f6c8fd9decbfe07a8e97be27533f9.tar.gz"],
)

http_archive(
    name = "rmf_building_map_msgs",
    build_file = "//third_party:rmf_building_map_msgs.BUILD.bazel",
    sha256 = "1dc0f1ca380fbba99dd0411e40ffba265fd2e221160d0d679ac2b4a50c0d6b46",
    strip_prefix = "rmf_building_map_msgs-1.6.0",
    urls = ["https://github.com/open-rmf/rmf_building_map_msgs/archive/refs/tags/1.6.0.tar.gz"],
)

http_archive(
    name = "rmf_site_map_msgs",
    build_file = "//third_party:rmf_site_map_msgs.BUILD.bazel",
    sha256 = "cac276fcd8bb7964ab345b6dca2ec5bc3517bc33e39de1ba983878c2e06043f7",
    strip_prefix = "rmf_internal_msgs-3.3.1/rmf_site_map_msgs",
    urls = ["https://github.com/open-rmf/rmf_internal_msgs/archive/refs/tags/3.3.1.tar.gz"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate", isolate = True)
crate.spec(
    package = "futures",
    version = "0.3",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1",
)
crate.spec(
    package = "serde-big-array",
    version = "0.5",
)
crate.spec(
    package = "serde_json",
    version = "1",
)
crate.spec(
    package = "yrs",
    version = "0.21",
)
crate.spec(
    features = ["ws"],
    package = "axum",
    version = "0.7",
)
crate.spec(
    features = ["full"],
    package = "tokio",
    version = "1",
)
crate.spec(
    package = "tokio-stream",
    version = "0.1",
)
crate.spec(
    default_features = False,
    features = [
        "cors",
        "fs",
    ],
    package = "tower-http",
    version = "0.5",
)
crate.spec(
    package = "serde_yaml",
    version = "0.9",
)
crate.spec(
    package = "futures-util",
    version = "0.3",
)
crate.spec(
    features = [
        "derive",
        "env",
    ],
    package = "clap",
    version = "4",
)
crate.spec(
    package = "tracing",
    version = "0.1",
)
crate.spec(
    features = ["env-filter"],
    package = "tracing-subscriber",
    version = "0.3",
)
crate.spec(
    package = "anyhow",
    version = "1",
)
crate.spec(
    package = "bytes",
    version = "1",
)
crate.spec(
    package = "tempfile",
    version = "3",
)
crate.spec(
    package = "async-trait",
    version = "0.1",
)
crate.spec(
    features = ["behavior-version-latest"],
    package = "aws-config",
    version = "1",
)
crate.spec(
    package = "aws-credential-types",
    version = "1",
)
crate.spec(
    features = ["behavior-version-latest"],
    package = "aws-sdk-s3",
    version = "1",
)

# crc-fast 1.10.0 needs Rust 1.89 (AVX-512). Pin the last 1.88-compatible release.
crate.spec(
    package = "crc-fast",
    version = "=1.9.0",
)

# time 0.3.48 added a parsing impl that breaks trait coherence with
# aws-smithy-types' blanket From impl under rustc 1.88 (E0119). from_specs
# re-resolves past the committed lock (0.3.47) on fresh CI; pin the last good one.
crate.spec(
    package = "time",
    version = "=0.3.47",
)
# aws-runtime fails type inference against aws-smithy-types 1.5.0 (E0282); pin
# the last known-good 1.4.x from the committed lock.
crate.spec(
    package = "aws-smithy-types",
    version = "=1.4.8",
)
crate.from_specs()
use_repo(crate, "crates")
