[package]
name = "imrmf_map_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "imrmf_map_editor"
path = "src/main.rs"

[dependencies]
yrs = "0.21"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
futures = "0.3"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
